@@ -46,6 +46,7 @@ struct cxx_pretty_printer : c_pretty_printer
   void statement (tree);
   void declaration (tree);
   void declaration_specifiers (tree);
+  void simple_type_specifier (tree);
   void function_specifier (tree);
   void declarator (tree);
   void direct_declarator (tree);
