@@ -1,3 +1,12 @@
+2013-09-04  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	* cxx-pretty-print.h (cxx_pretty_printer::simple_type_specifier):
+	Declare as overrider.
+	* cxx-pretty-print.c (cxx_pretty_printer::simple_type_specifier):
+	Rename from pp_cxx_simple_type_specifier.
+	(cxx_pretty_printer::cxx_pretty_printer): Do not assign to
+	simple_type_specifier.
+
 2013-09-03  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/58305
