@@ -1,3 +1,14 @@
+2013-09-04  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	* c-pretty-print.h (c_pretty_printer::simple_type_specifier): Now
+	a virtual member function.
+	(pp_simple_type_specifier): Remove.
+	(pp_c_type_specifier): Likewise.
+	* c-pretty-print.c (c_pretty_printer::simple_type_specifier):
+	Rename from pp_c_type_specifier.  Adjust.
+	(c_pretty_printer::c_pretty_printer): Do not assign to
+	simple_type_specifier.
+
 2013-09-03  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	* c-pretty-print.h (c_pretty_printer::type_id): Now a virtual
